Add NTP to install script requireents to avoid SSL issues

--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
+  hello, world
   <script type="text/x-handlebars">
     <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
