--- a/static/index.html
+++ b/static/index.html
@@ -2,28 +2,102 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Ember Starter Kit</title>
+  <title>Shopbot Example App</title>
+  <!-- From bootstrap -->
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
   <link rel="stylesheet" href="static/css/normalize.css">
   <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
   <script type="text/x-handlebars">
-    <h2>Welcome to Ember.js</h2>
+    <nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Shopbot Example Application</a>
+      </div>
 
-    {{outlet}}
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li>{{#linkTo 'tools'}}Tools{{/linkTo}}</li>
+          <li><a href="#">About</a></li>
+          <!--
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+              <li class="divider"></li>
+              <li><a href="#">One more separated link</a></li>
+            </ul>
+          </li>
+          -->
+        </ul>
+        <!--
+        <form class="navbar-form navbar-left" role="search">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Link</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+            </ul>
+          </li>
+        </ul>
+      -->
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
+  {{outlet}}
   </script>
 
-  <script type="text/x-handlebars" id="index">
-    <ul>
-    {{#each item in model}}
-      <li>{{item}}</li>
+  <script type="text/x-handlebars" id="tools">
+    <h2>Shopbot Tools</h2>
+    <table class="table">
+    <tr>
+      <th>Name</th>
+      <th>Xpos</th>
+      <th>Ypos</th>
+      <th>Zpos</th>
+      <th>status</th>
+    </tr>
+    {{#each model}}
+    <tr>
+      <td>{{name}}</td>
+      <td>{{xpos}}</td>
+      <td>{{ypos}}</td>
+      <td>{{zpos}}</td>
+      <td>{{status}}</td>
+    </tr>
     {{/each}}
-    </ul>
+    </table>
   </script>
 
   <script src="static/js/libs/jquery-1.10.2.js"></script>
   <script src="static/js/libs/handlebars-1.1.2.js"></script>
   <script src="static/js/libs/ember-1.4.0.js"></script>
+  <script src="static/js/libs/ember-data.js"></script>
   <script src="static/js/app.js"></script>
   <!-- to activate the test runner, add the "?test" query string parameter -->
   <script src="static/tests/runner.js"></script>
