--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,6 @@
   <title>Shopbot Example App</title>
   <!-- From bootstrap -->
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-  <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
   <link rel="stylesheet" href="static/css/normalize.css">
   <link rel="stylesheet" href="static/css/style.css">
@@ -28,22 +27,14 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li>{{#linkTo 'tools'}}Tools{{/linkTo}}</li>
-          <li><a href="#">About</a></li>
-          <!--
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Apps <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
+              <li>{{#link-to 'app'}}Universal Circle Cutter{{/link-to}}</li>
             </ul>
           </li>
-          -->
+          <li>{{#link-to 'tools'}}Tools{{/link-to}}</li>
+          <li><a href="#">About</a></li>
         </ul>
         <!--
         <form class="navbar-form navbar-left" role="search">
@@ -94,7 +85,37 @@
     </table>
   </script>
 
+  <script type="text/x-handlebars" id="app">
+    <div class="panel panel-default">
+      <div class="panel-heading app-heading">Universal Circle Cutter App</div>
+      <div class="panel-body">
+        <p>
+        This is a simple application that cuts a circle of the specified diameter and depth.
+        </p>
+        <table class="table">
+          <tr>
+            <td><strong>Diameter:</strong></td> 
+            <td>{{input value="1.0"}}</td>
+          </tr>
+          <tr>
+            <td><strong>Depth:</strong></td> 
+            <td>{{input value="0.25"}}</td>
+          </tr>
+        </table>
+        <button type="button" class="btn btn-default btn-lg pull-right">
+        <span class="glyphicon glyphicon-wrench"></span> Cut Circle
+        </button>
+      </div>
+    </div>
+  </script>
+
+  <script type="text/x-handlebars" id="about">
+  </script>
+
+
   <script src="static/js/libs/jquery-1.10.2.js"></script>
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
   <script src="static/js/libs/handlebars-1.1.2.js"></script>
   <script src="static/js/libs/ember-1.4.0.js"></script>
   <script src="static/js/libs/ember-data.js"></script>
