--- a/static/index.html
+++ b/static/index.html
@@ -102,7 +102,7 @@
             <td>{{input value="0.25"}}</td>
           </tr>
         </table>
-        <button type="button" class="btn btn-default btn-lg pull-right">
+        <button type="button" class="btn btn-default btn-lg pull-right" {{action 'cut'}}>
         <span class="glyphicon glyphicon-wrench"></span> Cut Circle
         </button>
       </div>
