--- a/static/index.html
+++ b/static/index.html
@@ -21,7 +21,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Shopbot Example Application</a>
+        <a class="brand" href="#"><img src="static/images/shopbot_logo.png"></a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
