Lots of improvements

--- a/static/index.html
+++ b/static/index.html
@@ -76,9 +76,9 @@
     {{#each model}}
     <tr>
       <td>{{name}}</td>
-      <td>{{xpos}}</td>
-      <td>{{ypos}}</td>
-      <td>{{zpos}}</td>
+      <td>{{position xpos}}</td>
+      <td>{{position ypos}}</td>
+      <td>{{position zpos}}</td>
       <td>{{status}}</td>
     </tr>
     {{/each}}
