Add some docs to the about page.

--- a/static/index.html
+++ b/static/index.html
@@ -110,6 +110,8 @@
   </script>
 
   <script type="text/x-handlebars" id="about">
+  <h2>About This Application</h2>
+  <p>The purpose of this example application is to demonstrate one strategy for providing an "apps framework" for Shopbot.  Rather than being an example app, this tool is an example framework which demonstrates how multiple apps might be structured to live in an "apps ecosystem" that potentially exists even when access to the web is intermittent or nonexistant.  Apps under this scheme run in the browser, but depend very little on code that runs remotely on a server, maximizing portability, and minimizing network dependence.</p>
   </script>
 
 
