Update text for applet

--- a/static/index.html
+++ b/static/index.html
@@ -66,10 +66,10 @@
 
   <script type="text/x-handlebars" id="app">
     <div class="panel panel-default">
-      <div class="panel-heading app-heading">Universal Circle Cutter App</div>
+      <div class="panel-heading app-heading">G-Code Streamer</div>
       <div class="panel-body">
         <p>
-        This is a simple application that cuts a circle of the specified diameter and depth.
+        This is a simple application for streaming a G-Code file.
         </p>
         <form action="/upload" method="post" enctype="multipart/form-data">
         <input type="file" name="file">
