--- a/static/index.html
+++ b/static/index.html
@@ -19,7 +19,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="brand" href="#"><img src="./images/shopbot_logo.png"></a>
+        <a class="brand" href="/"><img src="./images/shopbot_logo.png"></a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -30,7 +30,7 @@
           <li><a><strong>Y: </strong><span class="posy"></span></a></li>
           <li><a><strong>Z: </strong><span class="posz"></span></a></li>
         </ul>
-	<button id="keypad" type="button" class="btn navbar-btn"   style="opacity:0.2;"><img src="./images/arrow_key.png" /></button>
+	      <a class="navbar-right" id="keypad" style="opacity:0.2;"><img src="./images/arrow_key.png" /></a>
         <button type="button" class="btn btn-danger navbar-btn navbar-right stop-button hide">STOP TOOL</button>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
