Partial rework of machine states and keybaord operation

--- a/static/index.html
+++ b/static/index.html
@@ -168,7 +168,7 @@
       // Load the list of files available on the tool
       refresh_files_list();
 
-      setInterval(timer, 100);
+      //setInterval(timer, 100);
     });
 
     function timer() {
