--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
+<!DOCTYPE html> <html> <head>
   <meta charset="utf-8">
   <title>Shopbot Example App</title>
   <!-- From bootstrap -->
@@ -83,7 +81,7 @@
   <script src="./js/libs/jquery-1.10.2.js"></script>
   <script src="./js/bootstrap.min.js"></script>
   <script src="./js/libs/bootstrap.file-input.js"></script>
-  <script src="./js/FabMo-1.0.5.js"></script>
+  <script src="./js/FabMo-1.0.6.js"></script>
   
   <script type="text/javascript">
 	var tool = new FabMo(location.hostname||'localhost', '8080');
